[gd_scene load_steps=4 format=2]

[ext_resource path="res://Quests/QuestNodes/KillQuest.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Kill"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("OnKillLayer/KillCountLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnKillLayer/KillCountLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Start"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("FirstLayer/GoalLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.219608, 0.219608, 1 ), Color( 0.729412, 0.0823529, 0.0823529, 1 ), Color( 0.666667, 0.00392157, 0.00392157, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstLayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstLayer/GoalLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="KillQuest" type="Node"]
script = ExtResource( 1 )

[node name="FirstLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FirstLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -384.0
color = Color( 0, 0, 0, 0.0941176 )

[node name="GoalLabel" type="Label" parent="FirstLayer"]
modulate = Color( 1, 0.219608, 0.219608, 1 )
anchor_right = 0.097
anchor_bottom = 0.101
margin_top = 100.0
margin_right = 924.672
margin_bottom = 60.4
align = 1
valign = 1
percent_visible = 0.0

[node name="RewardLabel" type="Label" parent="FirstLayer"]
margin_right = 40.0
margin_bottom = 21.0

[node name="OnKillLayer" type="CanvasLayer" parent="."]

[node name="KillCountLabel" type="Label" parent="OnKillLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 21.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Kill = SubResource( 2 )
anims/Start = SubResource( 1 )
